Fix text alignment of preview link to the important info block

--- a/va-hakija/web/va/style/topbar.less
+++ b/va-hakija/web/va/style/topbar.less
@@ -83,7 +83,7 @@
 
   #form-error-summary {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: baseline;
     font-size: 13px;
     margin-right: 20px;
 
@@ -102,7 +102,7 @@
 
   .preview-link {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: baseline;
     font-size: 13px;
   }
 }
